--- a/user_interface/monitoring_project/config_app/templates/base.html
+++ b/user_interface/monitoring_project/config_app/templates/base.html
@@ -10,6 +10,7 @@
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logo.png' %}">
 </head>
 <body>
     {% load static %}
