--- a/user_interface/monitoring_project/config_app/templates/config_app/monitoring/monitoring_dashboard.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/monitoring/monitoring_dashboard.html
@@ -38,7 +38,8 @@
             const response = await fetch(`${flaskUrl}/get_all_results`, {
                 method: 'GET',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': getCookie('csrftoken')
                 }
             });
             if (!response.ok) {
@@ -122,10 +123,11 @@
         }
 
         async function fetchAndDisplayCrcaTaskDetails(taskId) {
-            const response = await fetch(`http://127.0.0.1:5023/results/${taskId}`, {
+            const response = await fetch(`${flaskUrl}/results/${taskId}`, {
                 method: 'GET',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': getCookie('csrftoken')
                 }
             });
             if (!response.ok) {
@@ -235,24 +237,37 @@
 
         updateDashboard();
     });
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
 </script>
 
 <style>
-.sidebar-link {
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-.sidebar-link:hover {
-    background-color: #f0f0f0 !important;
-    color: #000000 !important;
-    text-decoration: none !important;
-    font-weight: bold !important;
-}
-.text-center img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+    .sidebar-link {
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+    .sidebar-link:hover {
+        background-color: #f0f0f0 !important;
+        color: #000000 !important;
+        text-decoration: none !important;
+        font-weight: bold !important;
+    }
+    .text-center img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 </style>
 {% endblock %}
-
-
