--- a/user_interface/monitoring_project/config_app/templates/config_app/waiting_page.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/waiting_page.html
@@ -13,14 +13,31 @@
         var api_url = "{{ api_url|safe }}";
         var task_type = "{{ task_type|safe }}";
 
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        const csrftoken = getCookie('csrftoken');
+
         function checkStatus() {
-            console.log("Checking status for task_id: " + task_id);
             $.ajax({
                 url: api_url + "/get_status/" + task_id,
                 method: "GET",
-                timeout: 10000, // Set a timeout of 10 seconds
+                headers: {
+                    'X-CSRFToken': csrftoken
+                },
                 success: function (data) {
-                    console.log("Response received: ", data);
                     if (data.state === 'SUCCESS') {
                         window.location.href = "{% url 'get_results' task_id task_type %}";
                     } else if (data.state === 'FAILURE') {
@@ -30,13 +47,8 @@
                         $('#status').text("Status: " + data.status);
                     }
                 },
-                error: function(jqXHR, textStatus) {
-                    console.error("Error occurred: ", textStatus);
-                    if (textStatus === 'timeout') {
-                        $('#status').text("The request timed out.");
-                    } else {
-                        $('#status').text("An error occurred while checking the status.");
-                    }
+                error: function() {
+                    $('#status').text("An error occurred while checking the status.");
                     clearInterval(interval);
                 }
             });
