--- a/user_interface/monitoring_project/config_app/templates/config_app/waiting_page.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/waiting_page.html
@@ -10,33 +10,13 @@
 {% block extra_scripts %}
     <script>
         var task_id = "{{ task_id|safe }}";
-        var api_url = "{{ api_url|safe }}";
+        var api_url = "{% url 'check_status' task_id task_type %}";
         var task_type = "{{ task_type|safe }}";
-
-        function getCookie(name) {
-            let cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                const cookies = document.cookie.split(';');
-                for (let i = 0; i < cookies.length; i++) {
-                    const cookie = cookies[i].trim();
-                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
-                }
-            }
-            return cookieValue;
-        }
-
-        const csrftoken = getCookie('csrftoken');
 
         function checkStatus() {
             $.ajax({
-                url: api_url + "/get_status/" + task_id,
+                url: api_url,
                 method: "GET",
-                headers: {
-                    'X-CSRFToken': csrftoken
-                },
                 success: function (data) {
                     if (data.state === 'SUCCESS') {
                         window.location.href = "{% url 'get_results' task_id task_type %}";
