--- a/user_interface/monitoring_project/config_app/templates/config_app/home.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/home.html
@@ -11,7 +11,7 @@
                 <div class="list-group mb-4">
                     <a href="{% url 'monitoring_home' %}" class="list-group-item list-group-item-action">Monitoring</a>
                     <a href="{% url 'train_algorithms' %}" class="list-group-item list-group-item-action">Train Algorithms</a>
-                    <a href="{% url 'config' %}" class="list-group-item list-group-item-action">Update Configuration</a>
+                    <a href="{% url 'home_anomaly_detection' %}" class="list-group-item list-group-item-action">Anomaly Detection</a>
                 </div>
 
                 {% if config %}
