--- a/user_interface/monitoring_project/config_app/templates/config_app/monitoring/monitoring_task_manager.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/monitoring/monitoring_task_manager.html
@@ -75,19 +75,22 @@
     }
 
     async function stopTask(taskId) {
-        const response = await fetch(`{% url 'stop_task' %}`, {
-            method: 'DELETE',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ task_id: taskId })  // Send data in the request body
-        });
-        if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
+        try {
+            const response = await fetch(`/stop_task/${taskId}/`, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            });
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const result = await response.json();
+            alert(result.status);
+            fetchActiveTasks();
+        } catch (error) {
+            console.error('Failed to stop task:', error);
         }
-        const result = await response.json();
-        alert(result.status);
-        fetchActiveTasks();
     }
 
     async function fetchResults() {
@@ -172,19 +175,25 @@
     }
 
     async function deleteResult(taskId) {
-        const response = await fetch(`{% url 'delete_result' %}`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ task_id: taskId, crca_url: crcaUrl })  // Send data in the request body
-        });
-        if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
+        const crcaUrl = "{{ crcaUrl|escapejs }}"; // Ensure crcaUrl is correctly escaped for JavaScript context
+        const url = `/delete_result/${taskId}/${crcaUrl}/`;
+
+        try {
+            const response = await fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            });
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const result = await response.json();
+            alert(result.success);
+            fetchResults();
+        } catch (error) {
+            console.error('Failed to delete result:', error);
         }
-        const result = await response.json();
-        alert(result.success);
-        fetchResults();
     }
 
 </script>
