--- a/user_interface/monitoring_project/config_app/templates/config_app/anomaly_detection/crca/crca_display_response.html
+++ b/user_interface/monitoring_project/config_app/templates/config_app/anomaly_detection/crca/crca_display_response.html
@@ -8,7 +8,7 @@
 
     <h2>Graph Images</h2>
     {% for image in graph_images %}
-        <img src="data:image/png;base64,{{ image }}" alt="Graph Image" class="img-fluid mb-3" />
+        <img src="data:image/png;base64,{{ image }}" alt="Graph Image" class="img-fluid mb-3" style="max-width: 100%; height: auto;" />
     {% endfor %}
 
     <h2>CSV Data</h2>
